--- a/frontend/src/components/Pages/Account/Account.scss
+++ b/frontend/src/components/Pages/Account/Account.scss
@@ -1,4 +1,17 @@
 .account-container {
-    width: 50%;
+    width: 100%;
     height: 400px;
+
+}
+
+@media (min-width: 700px ) {
+.account-container {
+    width: 70%;
+}
+}
+
+@media (min-width: 900px ) {
+.account-container {
+    width: 50%;
+}
 }
