--- a/frontend/src/components/Pages/Login/Login.scss
+++ b/frontend/src/components/Pages/Login/Login.scss
@@ -1,5 +1,5 @@
 .login-container {
-    width: 40%;
+    width: 100%;
     height: 300px;    
     flex-direction: column;
     justify-content: space-evenly;
@@ -9,3 +9,16 @@
 .login-button {
     width: 30%;
 }
+
+@media (min-width: 600px ) {
+    .login-container {
+        width: 60%;
+        max-width: 500px;
+    }
+    }
+    
+    @media (min-width: 900px ) {
+    .login-container {
+        width: 500px;
+    }
+    }
